# ip-labs-x-platform-starter

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
include/labs/: lab1.hh  lab2.hh  lab3.hh  proba-cuda.hh
include/util/: image-util.hh  terminal-util.hh
src/: OpenCVApplication.cpp  main.cpp
src/labs/: lab1.cpp  lab2.cpp  lab3.cpp  proba-cuda.cpp
src/util/: file-util.cpp  image-util.cpp  terminal-util.cpp
